--- a/pokeApp/front-poke-desk/package.json
+++ b/pokeApp/front-poke-desk/package.json
@@ -16,6 +16,8 @@
     "autosuggest-highlight": "^3.2.1",
     "axios": "^0.26.1",
     "preact": "^10.5.15",
+    "prettier": "^2.6.2",
+    "react-toastify": "^8.2.0",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
