--- a/pokeApp/front-poke-desk/package.json
+++ b/pokeApp/front-poke-desk/package.json
@@ -13,7 +13,7 @@
     "@mui/icons-material": "^5.5.1",
     "@mui/material": "^5.5.2",
     "@mui/styled-engine-sc": "^5.5.2",
-    "autosuggest-highlight": "^3.2.1",
+    "@types/node": "^17.0.23",
     "axios": "^0.26.1",
     "preact": "^10.5.15",
     "prettier": "^2.6.2",
@@ -22,13 +22,12 @@
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.1.5",
-    "@types/autosuggest-highlight": "^3.2.0",
     "@types/axios": "^0.14.0",
     "@types/lodash": "^4.14.180",
-    "@types/react": "^17.0.40",
+    "@types/react": "^17.0.43",
     "@types/styled-components": "^5.1.24",
     "formik": "^2.2.9",
-    "typescript": "^4.5.4",
+    "typescript": "^4.6.3",
     "vite": "^2.8.0"
   }
 }
